whole parameter search works